# CNote

./: CMakeLists.txt  README.md
chapter10_process_interact/: alarm_test  alarm_test.c  greetings  greetings.c  math_master  math_master.c  news_opener.c  newshound2.c  test.c
chapter11_telecommunication/: advice_service  advice_service.c  ikkp_server  ikkp_server.c  wiki_client  wiki_client.c
chapter12_thread/: argument  argument.c  beer.c  beer2  beer2.c  param_test  param_test.c
chapter1_base/: main.c
chapter2_5_string/: StringTest.c
chapter2_pointer/: PointerTest.c  ScanTest.c  SubString.c  fgetsTest.c
chapter3_tool/: bermuda.c  categorize.c  geo2json.c  order_pizza.c  output.json  read_spooky.c
chapter4_multiple_source/: encrypt.h  message_hider.c  test1.c  test2.c
chapter5_struct_union/: bitfield.c  test1.c  test2.c  test3.c
chapter6_data_struct/: linked_list.c  source.txt  test1.c  tour.c  trip.txt
chapter7_adv_function/: find.c  find2.c  price_drinks.c  print_int.c  qsort.c  send_dear_john.c  send_dear_john2.c
chapter8_shared_code/: encrypt.h  test_cal.c  test_code.c
chapter8_shared_code/cal/: CMakeLists.txt  elliptical.c  gcc static link log.txt  hfcal.c  hfcal.h  hfcal_UK.c
chapter8_shared_code/mylib/: CMakeLists.txt  checksum.c  checksum.h  encrypt.c
chapter9_system/: dinner_info.c  err_exec.c  guard_dog.c  my_exec_program.c  system_test.c
chapter9_system/coffee/: coffee.c  test_coffee.c
chapter9_system/fork/: fork_test.c  printer.c
lib/: hello.c  hello.h  text_lib.c
test_for_fun/: comand_test.c
